Fixes for the ftp and video preview

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <?php $title='Bike shop | Home'; include_once("./includes/header.php"); ?>
 
 
-<header data-vide-bg="./videos/header-video" style="position: unset; z-index: 2;">
+<header style="position: unset; z-index: 2;" data-vide-bg="mp4: ./videos/header-video, poster: ./images/video_preview" data-vide-options="posterType: jpeg, loop: true, muted: true">
 
 
   <div class="purpleFilter">
